# EldritchHero

./: AutomaticWeaponAbilities  Cargo.toml  ErrorList.txt  FirstHourGoal.txt  WeaponOverhaul.txt  audiosystem.txt
src/: audio.rs  automatic_projectiles.rs  components.rs  debug_menu.rs  enemy.rs  game.rs  glyphs.rs  horror.rs  in_game_debug_ui.rs  items.rs  items_test.rs  lib.rs  main.rs  player.rs  player_input.rs  skill_test.rs  skills.rs  survivor.rs  upgrade_test.rs  upgrades.rs  visual_effects.rs  weapon_systems.rs
src/automatic_weapons/: aether_bolt.rs  arcane_ray.rs  chain_lightning.rs  chi_bolt.rs  crystal_shard.rs  earthshatter_shard.rs  eldritch_gatling.rs  glacial_spike.rs  holy_lance.rs  inferno_bolt.rs  magma_ball.rs  metal_shrapnel.rs  mod.rs  moonbeam_dart.rs  natures_wrath.rs  primordial_ichor_blast.rs  psionic_lash.rs  sand_blast.rs  shadow_orb.rs  spectral_blades.rs  spirit_bomb.rs  sunfire_burst.rs  venom_spit.rs  void_cannon.rs  void_tendril.rs
src/custom_weapons/: circle_of_warding.rs  mod.rs  swarm_of_nightmares.rs
tests/: item_tests.rs  skill_test.rs  upgrade_tests.rs
web_dist/: eldritch_hero.d.ts  eldritch_hero.js  eldritch_hero_bg.wasm.d.ts  index.html
