[package]
name = "eldritch_hero"
version = "0.1.0" # Or your actual project version
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" } # Downgraded to Bevy 0.12.1
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
# No bevy_embedded_assets here, as per previous reversion

# Turn off default backends & enable wasm_js
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
uuid      = { version = "1.16", default-features = false, features = ["v4", "js"] }

[build-dependencies]
# No bevy_embedded_assets here